objects/Custom_Reports_and_Processes__c.object
<CustomObject>
    <description>Documentation on processes and reports</description>
    <fields>
        <fullName>Deprecated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deprecated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>List the logic for the process/report</inlineHelpText>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lightning_Enabled__c</fullName>
        <label>Lightning Enabled</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Technical_Notes__c</fullName>
        <label>Technical Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Indicate if this report is internal only or public-facing. If public-facing, which web pages provide links to the report.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Batch Program</fullName>
                </value>
                <value>
                    <fullName>Custom Button</fullName>
                </value>
                <value>
                    <fullName>Custom Form</fullName>
                </value>
                <value>
                    <fullName>Custom Process</fullName>
                </value>
                <value>
                    <fullName>Custom Report</fullName>
                </value>
                <value>
                    <fullName>Custom Tab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Used_By__c</fullName>
        <label>Used By</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Mozilla Internal</fullName>
                </value>
                <value>
                    <fullName>Mozilla Public</fullName>
                </value>
                <value>
                    <fullName>Microsoft Internal</fullName>
                </value>
                <value>
                    <fullName>Microsoft Public</fullName>
                </value>
                <value>
                    <fullName>CAs Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Custom Reports and Processes</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Reports and Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>